# setup-python-test

./: CMakeLists.txt  ctpes.py  ffi.py  main.c  pyproject.toml  t  tcltk.py  test.py  tk_min.py
.github/workflows/: blank.yml
poetry-demo/: main.py  pyproject.toml
