[tool.poetry]
name = "setup-python-test"
version = "0.1.0"
description = ""
authors = ["Sergey Dolin <sergey.dolin@gmail.com>"]
readme = "README.md"
packages = [{include = "setup_python_test"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
