[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Sergey Dolin <sergey.dolin@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.8"
uuid0 = "^0.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
